kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-user-management
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms-user-management
  template:
    metadata:
      labels:
        app: cms-user-management
    spec:
      containers:
        - name: cms-user-management
          image: cmsusermanagement:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cms-user-management
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: cms-user-management
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: cms-user-management-route
  namespace: default
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
  hostnames:
    - "user.jonfjz.dev"
  rules:
    - matches:
        - path:
            type: Prefix
            value: /
      forwardTo:
        - serviceName: cms-user-management
          port: 8080
